WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84599
[chromium] Properly ignore unsupported animation directions.
https://bugs.webkit.org/show_bug.cgi?id=84599
Summary
[chromium] Properly ignore unsupported animation directions.
vollick
Reported
2012-04-23 07:49:42 PDT
Currently, we still try and accelerate animations in the reverse or reverse alternating directions. This is a bug.
Attachments
Patch
(4.35 KB, patch)
2012-04-23 07:51 PDT
,
vollick
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
vollick
Comment 1
2012-04-23 07:51:48 PDT
Created
attachment 138348
[details]
Patch
Adrienne Walker
Comment 2
2012-04-23 09:21:17 PDT
Comment on
attachment 138348
[details]
Patch Sounds reasonable to me. R=me.
WebKit Review Bot
Comment 3
2012-04-23 10:28:59 PDT
Comment on
attachment 138348
[details]
Patch Clearing flags on attachment: 138348 Committed
r114915
: <
http://trac.webkit.org/changeset/114915
>
WebKit Review Bot
Comment 4
2012-04-23 10:29:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug