[chromium] Properly ignore unsupported animation directions. https://bugs.webkit.org/show_bug.cgi?id=84599

Patch by Ian Vollick <vollick@chromium.org> on 2012-04-23
Reviewed by Adrienne Walker.

Source/WebCore:

Tested in CCLayerAnimationControllerTest.ignoreUnsupportedAnimationDirections.

* platform/graphics/chromium/cc/CCLayerAnimationController.cpp:

Source/WebKit/chromium:

* tests/CCLayerAnimationControllerTest.cpp:
(WebKitTests::TEST):
(WebKitTests):

Canonical link: https://commits.webkit.org/102100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114915 268f45cc-cd09-0410-ab3c-d52691b4dbfc